--- a/package.json
+++ b/package.json
@@ -28,14 +28,13 @@
   "eslintConfig": {
     "root": true,
     "env": {
-      "node": true
+      "node": false
     },
     "extends": [
       "plugin:vue/essential",
       "eslint:recommended"
     ],
     "parserOptions": {
-      "parser": "babel-eslint"
     },
     "rules": {}
   },
