--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "main": "index.js",
   "dependencies": {
     "core-js": "^3.6.4",
+    "stats.js": "^0.17.0",
     "three": "^0.115.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1"
